--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,8 @@
 @import './utils/variables';
 
 @import '../js/components/Navbar/navbar';
+@import '../js/components/Carousel/carousel.scss';
+@import '../js/layouts/InfoBlock/infoblock';
 @import '../js/components/Card/infocard';
 
 button{
