--- a/src/js/components/Card/InfoCard.hbs
+++ b/src/js/components/Card/InfoCard.hbs
@@ -1,16 +1,29 @@
 
   {{#each this}}
-    <div class="row" style="padding: 5px">
-      <div class="card card-info col-md-7 col-sm-12">
-        <h3>{{titel}}</h3>
-          {{#each text}} 
-            <p>{{this}}</p>
-          {{/each}}
-      </div>
-      <div class="col-md-5 col-sm-12 my-3">
-        <div class="card card-img">
-          {{!-- <img class="w-100" src="images/medical-it.jpg" alt="" /> --}}
-        </div>
-      </div>
+     <div class="row" style="padding: 5px">
+
+        {{#if  left}}
+          <div class="col-md-5 col-sm-12 my-3">
+            <div class="card card-img">
+              <img class="w-100" src="{{url}}" alt="" />
+            </div>
+          </div>
+        {{/if }}
+
+          <div class="card card-info col-md-7 col-sm-12">
+            <h3>{{titel}}</h3>
+            {{#each text}} 
+              <p>{{this}}</p>
+            {{/each}}
+          </div>
+
+        {{#if  right}}
+          <div class="col-md-5 col-sm-12 my-3">
+            <div class="card card-img">
+              <img class="w-100" src="{{url}}" alt="" />
+            </div>
+          </div>
+        {{/if }}
+        
     </div>
   {{/each}}
