--- a/src/js/components/Navbar/Navbar.hbs
+++ b/src/js/components/Navbar/Navbar.hbs
@@ -1,7 +1,7 @@
 <div class="container">
-  {{!-- <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="#">
     <img class="logo" src="{{this}}" alt="" />
-  </a> --}}
+  </a>
   <button
     class="navbar-toggler"
     type="button"
