--- a/src/js/layouts/InfoBlock/InfoBlock.hbs
+++ b/src/js/layouts/InfoBlock/InfoBlock.hbs
@@ -1,6 +1,6 @@
 
 
-<div class="container card shadow p-3 my-3"><a name="{{blockname}}">
+<div class="container card shadow p-3 my-3 infoblock"><a class="infoblock" name="{{blockname}}">
   <h2 class="text-center">{{blockname}}</h2>
 </a>  {{{cards}}}
 </div>
